--- a/login.html
+++ b/login.html
@@ -105,7 +105,7 @@
 
     <p class="form__text">
         <div class="links">
-            <a class="form__link" href="./" id="linkCreateAccount"><button type="button" class="signupbtn">Sign Up</button></a>
+            <a class="form__link" id="linkCreateAccount"><button type="button" class="signupbtn">Sign Up</button></a>
         </div>
     </p>
 </footer>
