--- a/main.html
+++ b/main.html
@@ -150,16 +150,16 @@
                     <div class="todo-tag">
                         Memos
                     </div>
-                    <!--<p class="description">
+                    <p class="description">
                         I have no idea what i am doing.
                     </p>
                     <div class="todo-actions">
                         <i class="far fa-edit"></i>
-                        <i class="far fa-trash-alt"></i>-->
+                        <i class="far fa-trash-alt"></i>
+                    </div>
                 </div>
-    </div>
-    </section>
-    </main>
+            </section>
+        </main>
     </div>
     <div id='fetch-area'>
     </div>
