--- a/main.html
+++ b/main.html
@@ -168,10 +168,10 @@
 
                         <!--<input type="text" name="status" placeholder="Status: Todo/In Progerss/Review/Done" required>-->
                         <p type="card-text "><label for="status">Status:</label><select name="status">
-                            <option value="TODO">Todo</option>
-                            <option value="IN PROGERSS">In Progress</option>
-                            <option value="REVIEW">Review</option>
-                            <option value="DONE">Done</option>
+                            <option value="Todo">Todo</option>
+                            <option value="In Progress">In Progress</option>
+                            <option value="Review">Review</option>
+                            <option value="Done">Done</option>
                          </select></p>
 
                     </div>
